--- a/Introducao_javascript/index.html
+++ b/Introducao_javascript/index.html
@@ -12,7 +12,9 @@
 </head>
 
 <body>
-    <h2>Minha página</h2>
+   <button onclick="clicou()" type="button">Clique aqui</button>
+   <h3 id="agradecimento" onclick="redirecionar()"></h3>
+   <h3 id="mousemove" onmouseover="trocar()" onmouseout="voltar()" ></h3>
 
    
 
