--- a/Consumindo APIs/index.html
+++ b/Consumindo APIs/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Just... cats</title>
 </head>
 <body>
 
-    <h1>Resultado</h1>
-
-    <h2 id="resultadoFor"></h2>
-    
-    <script src="./script.js"></script>
+    <main>
+        <h1>Just... cats</h1>
+        <img id="cat"><br />
+        <button id="change-cat"> Change cat</button>
+    </main>
+    <script src="script.js"></script>
 </body>
 </html>
