--- a/Funcoes/index.html
+++ b/Funcoes/index.html
@@ -7,13 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-
-
-
-
-
-    
-    <script type="module" src="./main.mjs"></script>
-    <script type="module" src="./funcoes.mjs"></script>
+    <script src="./calculadora.js"></script>
 </body>
 </html>
